--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -10,3 +10,33 @@
     margin: 100px 50px;
     gap: 30px;
 }
+
+
+
+
+@media screen and (max-width:1200px) {
+
+    .shop {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 50px;
+        order: first;
+    }
+
+    .cart-container {
+        text-align: center;
+        grid-row: 1;
+        margin-top: 100px;
+    }
+
+    .meal-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .meal-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+    }
+}
