--- a/src/Components/Meal/Meal.css
+++ b/src/Components/Meal/Meal.css
@@ -27,3 +27,9 @@
     background-color: orangered;
     color: whitesmoke;
 }
+
+@media screen and (max-width:1200px) {
+    .meal img {
+        width: 100%;
+    }
+}
